--- a/web/public/pdf.html
+++ b/web/public/pdf.html
@@ -6,6 +6,8 @@
   <body>
     <input type="file" id="fileInput" accept=".pdf" onchange="loadPdf()" />
     <div id="pdfViewer"></div>
+    <button onclick="goBack()">Back to Student Page</button>
+    <button onclick="location.href='/teacher'">Go back to teacher page</button>
     <script>
       function loadPdf() {
         const file = document.getElementById("fileInput").files[0];
@@ -17,6 +19,9 @@
             <embed src="${reader.result}" type="application/pdf" width="800px" height="1000px" />
           `;
         };
+      }
+      function goBack() {
+        window.location.href = "/student";
       }
     </script>
   </body>
