--- a/web/public/teacher.html
+++ b/web/public/teacher.html
@@ -168,7 +168,7 @@
                         </div>
                     </div>
                 </section>
-                <!-- end of sownload table section -->
+                <!-- end of download table section -->
 
                 <!-- booking lecturehall system -->
                 <section class="py-4 py-xl-5">
