--- a/web/public/administrator.html
+++ b/web/public/administrator.html
@@ -136,6 +136,24 @@
               <a
                 class="nav-link active"
                 data-bss-hover-animate="wobble"
+                href="/pdf_d"
+                style="
+                  --bs-body-color: #212529;
+                  color: rgb(255, 255, 255);
+                  background: rgb(255, 13, 13);
+                  border-radius: 0.5px;
+                  border-top-left-radius: 0px;
+                  border-top-right-radius: 0px;
+                  border-bottom-right-radius: 0px;
+                  border-bottom-left-radius: 0px;
+                "
+                >Manage Events</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                data-bss-hover-animate="wobble"
                 href="/manageUser"
                 style="
                   --bs-body-color: #212529;
