--- a/web/public/Landing.html
+++ b/web/public/Landing.html
@@ -214,7 +214,7 @@
           <div class="carousel-item">
             <img
               class="d-block w-100"
-              src="https://placeholder.pics/svg/1024x500/0EE2FF"
+              src="assets/img/proj.jpeg"
               alt="..."
             />
             <div class="d-none d-md-block carousel-caption">
@@ -227,7 +227,7 @@
           <div class="carousel-item">
             <img
               class="d-block w-100"
-              src="https://placeholder.pics/svg/1024x500/FF4E50"
+              src="assets/img/ "
               alt="..."
             />
             <div class="d-none d-md-block carousel-caption">
@@ -331,7 +331,7 @@
                   </div>
                   <img
                   class="d-block w-100"
-                  src="/assets/img/random.JPG"
+                  src="/assets/img/mehak.jpeg"
                   alt="..."
                 />
                   <h4 class="card-title">Mehak</h4>
@@ -399,7 +399,7 @@
                   </div>
                   <img
                   class="d-block w-100"
-                  src="/assets/img/random.JPG"
+                  src="/assets/img/krish.jpeg"
                   alt="..."
                 />
                   <h4 class="card-title">Krish</h4>
